# Embedded-Virtual-Keyboard-for-Touchscreen-Qt-Widget-Applications

./: CMakeLists.txt  LICENSE.txt  README.md  mainwindow.h  run_cmake.sh
keyboard/: QKeyPushButton.cpp  QKeyPushButton.h  widgetKeyBoard.cpp  widgetKeyBoard.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
